made more adjustments to fix breadcrumb scrolling on ie

--- a/sites/all/themes/symbio/assets/scss/_custom.scss
+++ b/sites/all/themes/symbio/assets/scss/_custom.scss
@@ -903,6 +903,7 @@ select {
 .masthead-nav {
 	overflow: auto;
 	-ms-overflow-style: -ms-autohiding-scrollbar;
+	height: rem-calc(48);
 }
 
 .tab-links,
@@ -963,6 +964,7 @@ select {
 	border-bottom-right-radius: 0;
 	display: inline-block;
 	vertical-align: top;
+	margin-bottom: rem-calc(-2);
 	
 	@media #{$large-up} {
 		
